--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,3 +11,8 @@ $card-digi-plus : #62666d;
 $progress-bar-back :#e2e2e2;
 $discount-btn : #fb3449;
 $old-price : #acacac;
+$light-border : #dfdfdf;
+$category-title : #515151;
+$single-pic-container-border : #00bfd64d;
+$category-card-title : #535353;
+$single-item-title : #6e6e6e;
