--- a/components/sponseredAds/scss/sponsered-ad.module.scss
+++ b/components/sponseredAds/scss/sponsered-ad.module.scss
@@ -1,6 +1,6 @@
 .sponsered-ad-container{
   width: 72%;
-  margin: 28px auto;
+  margin: 28px auto 5px auto;
   img{
     background-size: cover !important;
     background-position: center!important;
