--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -16,3 +16,6 @@ $category-title : #515151;
 $single-pic-container-border : #00bfd64d;
 $category-card-title : #535353;
 $single-item-title : #6e6e6e;
+$categories-title : #656565;
+$categories-items : #00bfd6;
+$categories-item-title : #2a2a2a;
