--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -19,3 +19,7 @@ $single-item-title : #6e6e6e;
 $categories-title : #656565;
 $categories-items : #00bfd6;
 $categories-item-title : #2a2a2a;
+$footer-support : #424750;
+$input-email-color : #81858b;
+$footer-download-back :#3c4b6d;
+$footer-border : #e5e5ea;
