added navigation without drop down

--- a/components/categories/categories-card/scss/categories-card.module.scss
+++ b/components/categories/categories-card/scss/categories-card.module.scss
@@ -5,6 +5,7 @@
   direction: rtl;
   grid-template-rows: 50% 50% 1%;
   width: 133px;
+  cursor: pointer;
   text-align: center;
   .categories-icon{
     svg{
