--- a/components/footer/footer-support/styles/footer-support.module.scss
+++ b/components/footer/footer-support/styles/footer-support.module.scss
@@ -49,6 +49,7 @@
         color: $footer-support;
       }
       img{
+        cursor: pointer;
         height: 45px;
         width: 45px;
       }
