--- a/components/category/category-card/scss/category-card.module.scss
+++ b/components/category/category-card/scss/category-card.module.scss
@@ -1,5 +1,6 @@
 @import './styles/variables';
 .card-container {
+  cursor: pointer;
   background-color: $white;
   height: 320px;
   display: grid;
