--- a/components/footer/styles/footer.module.scss
+++ b/components/footer/styles/footer.module.scss
@@ -6,6 +6,7 @@
   background-color: $white;
   .copy-right{
     font-family: digikala;
+    direction: rtl;
     font-size: 14px;
     margin: -10px 0 10px 0;
     color: $input-email-color;
