--- a/components/footer/footer-partners/style/footer-partners.module.scss
+++ b/components/footer/footer-partners/style/footer-partners.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
+  flex-wrap: wrap;
   background-color: #f2f2f2;
   margin-top: 20px;
   .partner{
