--- a/components/footer/footer-support/styles/footer-support.module.scss
+++ b/components/footer/footer-support/styles/footer-support.module.scss
@@ -40,6 +40,7 @@
     flex-direction: row-reverse;
     border-bottom: 1px solid $btn-border;
     padding: 25px 0;
+    margin-top: 10px;
     .feature-item-container{
       font-family: digikala;
       div{
