--- a/components/specials/scss/specials.module.scss
+++ b/components/specials/scss/specials.module.scss
@@ -39,3 +39,11 @@
     padding-top: 25px;
   }
 }
+.swiper-button-next{
+width: 10px;
+  height: 10px;
+  background-color: red;
+}
+.swiper-button-prev{
+
+}
