--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -23,3 +23,4 @@ $footer-support : #424750;
 $input-email-color : #81858b;
 $footer-download-back :#3c4b6d;
 $footer-border : #e5e5ea;
+$divider-color : #eee;
