--- a/components/specials/scss/specials.module.scss
+++ b/components/specials/scss/specials.module.scss
@@ -4,7 +4,15 @@
   width:100%;
   background-color: $special-back;
   height: 500px;
+  @media screen and (max-width: 600px){
+    height: 400px;
+  }
   .special-img{
+    @media screen and (max-width: 600px){
+      right: 2%;
+      height: 330px;
+      width: 150px;
+    }
     position: absolute;
     top: 10px;
     right: 16%;
@@ -15,7 +23,13 @@
     background-repeat: no-repeat!important;
   }
   .specials-btn{
-    padding: 9px 16px 9px 45px;
+    @media screen and (max-width: 600px){
+      right: 2%;
+      border: none;
+      top: 75%;
+      font-size: 12.5px;
+    }
+    padding: 11px 16px 9px 45px;
     font-size: 14px;
     font-family: digikala;
     line-height: 1.571;
@@ -34,6 +48,9 @@
     }
   }
   .special-swiper-container{
+    @media screen and (max-width:600px){
+      margin-left: 0;
+    }
     width: 56.5%;
     margin-left: 14.5%;
     padding-top: 25px;
