--- a/components/sponseredAds/scss/sponsered-ad.module.scss
+++ b/components/sponseredAds/scss/sponsered-ad.module.scss
@@ -1,5 +1,7 @@
 .sponsered-ad-container{
-  width: 71.4%;
+  @media screen and (min-width:600px){
+    width: 71.4%;
+  }
   margin: 28px auto 5px auto;
   img{
     background-size: cover !important;
