--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -24,3 +24,4 @@ $input-email-color : #81858b;
 $footer-download-back :#3c4b6d;
 $footer-border : #e5e5ea;
 $divider-color : #eee;
+$responsive-svg-color : #f9a825;
