--- a/components/header/style/header.module.scss
+++ b/components/header/style/header.module.scss
@@ -6,3 +6,11 @@
     display: none;
   }
 }
+@media screen and (min-width:600px){
+  .responsive-show{
+    display: none;
+  }
+  .responsive-hidden{
+    display: block;
+  }
+}
