--- a/components/specials/scss/specials.module.scss
+++ b/components/specials/scss/specials.module.scss
@@ -27,8 +27,9 @@
       right: 2%;
       border: none;
       top: 75%;
-      font-size: 12.5px;
+      font-size: 11px;
     }
+    cursor: pointer;
     padding: 11px 16px 9px 45px;
     font-size: 14px;
     font-family: digikala;
@@ -45,6 +46,9 @@
       position: absolute;
       top: 12px;
       left: 13%;
+      @media screen and (max-width: 600px){
+        left: 18%;
+      }
     }
   }
   .special-swiper-container{
