--- a/components/footer/footer-about/style/footer-about.module.scss
+++ b/components/footer/footer-about/style/footer-about.module.scss
@@ -52,6 +52,7 @@
   }
   .about-text{
     font-family: digikala;
+    margin-top: 45px;
     .about-title{
       font-size: 14px;
       font-weight: 700;
