--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -25,3 +25,5 @@ $footer-download-back :#3c4b6d;
 $footer-border : #e5e5ea;
 $divider-color : #eee;
 $responsive-svg-color : #f9a825;
+$category-responsive-title : #858585;
+$footer-colored-text : #0fabc6;
