--- a/components/footer/footer-downloads/style/footer-download.module.scss
+++ b/components/footer/footer-downloads/style/footer-download.module.scss
@@ -1,6 +1,7 @@
 @import 'styles/variables';
-.footer-download-container{
-  .footer-download{
+
+.footer-download-container {
+  .footer-download {
     background-color: $footer-download-back;
     padding: 16px 20px;
     height: 76px;
@@ -11,16 +12,61 @@
     flex-direction: row-reverse;
     justify-content: space-between;
     width: 70%;
-    .downloads{
+    position: relative;
+    @media screen and (max-width: 600px) {
+      background-color: transparent;
+      padding: 0;
+      width: 95%;
+    }
+
+    .more-items {
       display: flex;
-      .download-item{
-        width: 150px;
+      flex-direction: row-reverse;
+      flex-wrap: wrap;
+      @media screen and (max-width: 600px){
+        position: absolute;
+        top: 25px;
+        right: 0%;
       }
-      .download-item , .download-more{
+    }
+    .downloads {
+      display: flex;
+      flex-wrap: wrap;
+      @media screen and (max-width: 600px){
+        display: block;
+      }
+      .download-item {
+        background-repeat: no-repeat !important;
+        background-size: cover !important;
+        width: 150px;
+        @media screen and (max-width: 600px){
+          height: 50px!important;
+          width: 168px!important;
+        }
+        @media screen and (max-width: 600px) {
+          &:nth-child(1) {
+            background: url("https://mobile.digikala.com/static/files/77ae1bc6.png") no-repeat !important;
+            background-size: cover !important;
+          }
+          &:nth-child(2) {
+            background: url("https://mobile.digikala.com/static/files/77ae1bc6.png") no-repeat !important;
+            background-size: cover !important;
+          }
+          &:nth-child(3) {
+            background: url("https://mobile.digikala.com/static/files/43afe6fd.png") no-repeat !important;
+            background-size: cover !important;
+          }
+          &:nth-child(4) {
+            background: url("https://mobile.digikala.com/static/files/60d5158a.png") no-repeat !important;
+            background-size: cover !important;
+          }
+        }
+      }
+      .download-item, .download-more {
         height: 44px;
         margin: 5px;
       }
-      .download-more{
+      .download-more {
         width: 44px;
         display: flex;
         border-radius: 4px;
@@ -28,16 +74,46 @@
         font-weight: bolder;
         justify-content: center;
         background-color: $white;
+        @media screen and (max-width: 600px) {
+          position: relative;
+          &:after {
+            content: "<   اطلاعات بیشتر";
+            color: $footer-colored-text;
+            font-size: 12px;
+            white-space: nowrap;
+            background-color: $white;
+            position: absolute;
+            top: -3px;
+            padding-bottom: 15px;
+            left: 10px;
+            font-weight: normal;
+          }
+        }
       }
     }
-    .download-title-container{
+
+    .download-title-container {
       display: flex;
       justify-content: center;
       align-items: center;
-      .label{
+      @media screen and (max-width: 600px) {
+        height: fit-content;
+      }
+
+      .label {
         font-size: 18px;
         margin: 0 15px;
         color: $white;
+        @media screen and (max-width: 600px) {
+          color: $footer-support;
+          text-align: right;
+          font-size: 14px;
+          margin: 0;
+          white-space: nowrap;
+          & + img {
+            display: none;
+          }
+        }
       }
     }
   }
