--- a/components/footer/footer-support/styles/footer-support.module.scss
+++ b/components/footer/footer-support/styles/footer-support.module.scss
@@ -2,6 +2,7 @@
 .footer-support-container{
   @media screen and (max-width:600px){
     width: 90% !important;
+    margin: 20px auto;
   }
   .back-to-top-container{
     flex-direction: row-reverse;
@@ -10,6 +11,11 @@
     img{
       width: 113.33px;
       height: 30px;
+      @media screen and (max-width:600px){
+        width: 91px;
+        height: 24px;
+        margin-top: 10px;
+      }
     }
     span{
       bottom: 1.5px;
@@ -27,6 +33,15 @@
       color: $icon-gray;
       padding: 5px 16px 5px 40px;
       font-family: digikala;
+      @media screen and (max-width:600px){
+        font-size: 12px;
+        border: 1px solid $btn-border;
+      }
+      span{
+        svg{
+          padding: 5px;
+        }
+      }
     }
   }
   .support-text{
@@ -35,6 +50,16 @@
     color: $footer-support;
     margin-top: 10px;
     direction: rtl;
+    @media screen and (max-width:600px){
+      span{
+        display: block;
+        line-height: 25px;
+      }
+      .responsive-none{
+        font-size: 12px;
+        color: $input-email-color;
+      }
+    }
   }
   .footer-features-container{
     display: flex;
@@ -44,6 +69,9 @@
     border-bottom: 1px solid $btn-border;
     padding: 25px 0;
     margin-top: 10px;
+    @media screen and (max-width: 600px){
+      display: none;
+    }
     .feature-item-container{
       font-family: digikala;
       div{
