--- a/components/specials/specialCard/scss/special-card.module.scss
+++ b/components/specials/specialCard/scss/special-card.module.scss
@@ -20,6 +20,7 @@
   @media screen and (max-width: 600px){
     height: 330px;
     width: 200px;
+    margin: 10px 0;
     .card-img {
       width: 120px;
       height: 120px;
