responsive jest configuration upgrade

--- a/components/footer/footer-about/style/footer-about.module.scss
+++ b/components/footer/footer-about/style/footer-about.module.scss
@@ -14,14 +14,14 @@
 }
 .copy-right-responsive{
   font-size: 12px;
-  margin:-10px 10px;
+  margin:-17px 10px -4px 10px;
   @media screen and (min-width: 600px){
     display: none;
   }
 }
 .about-container{
   @media screen and (max-width:600px){
-    width: 100%;
+    width: 93%;
     flex-direction: column-reverse;
   }
   width: 70%;
@@ -33,7 +33,7 @@
   .trust-container{
       margin-right: 25px;
     @media screen and (max-width : 600px){
-      margin: 5px auto;
+      margin: 8px auto;
     }
     display: flex;
     .trust-items{
@@ -52,11 +52,18 @@
   }
   .about-text{
     font-family: digikala;
-    margin-top: 45px;
+    margin-top: 50px;
+    border-top: 1px solid $footer-border;
+    padding-top: 10px;
     .about-title{
       font-size: 14px;
       font-weight: 700;
       color: $footer-support;
+      @media screen and (max-width: 600px){
+        font-size: 12px;
+        font-weight: normal;
+        line-height: 30px;
+      }
     }
     .about-paragraph{
       font-size: 12px;
@@ -65,6 +72,9 @@
       direction: rtl;
       overflow: hidden;
       margin: 0;
+      @media screen and (max-width:600px){
+        font-size: 10px;
+      }
     }
     .more-toggle{
       font-family: digikala;
@@ -79,7 +89,6 @@
       }
     }
     .less{
-      margin-bottom: 15px;
       height: 85px;
     }
     .more{
