--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -27,3 +27,5 @@ $divider-color : #eee;
 $responsive-svg-color : #f9a825;
 $category-responsive-title : #858585;
 $footer-colored-text : #0fabc6;
+$personal-icon-color : #4caf50;
+$personal-title-color : #232933;
