--- a/components/personal/style/personal.module.scss
+++ b/components/personal/style/personal.module.scss
@@ -1,7 +1,7 @@
 @import './styles/variables';
 .personal-container{
   background-color: $white;
-  width: 409px;
+  width: 95%;
   height: 289px;
   margin: 10px auto;
   direction: rtl;
