added category drop down

--- a/components/header/navigation/scss/navigation.module.scss
+++ b/components/header/navigation/scss/navigation.module.scss
@@ -30,6 +30,10 @@
     display: flex;
     flex-direction: row;
     position: relative;
+    .categories{
+      display: none;
+      transition: all  1s;
+    }
     .navbar-item{
       cursor: pointer;
       padding: 16px 25px 16px 15px;
@@ -52,10 +56,16 @@
         position: absolute;
       }
       &:hover{
+        & + .darker-back{
+          display: block;
+        }
         &:before , &:after{
           width: 50%;
         }
         .drop-down{
+          display: block;
+        }
+        & + .categories{
           display: block;
         }
       }
@@ -76,7 +86,7 @@
         left: 0;
       }
       .drop-down{
-        z-index: 10;
+        z-index: 30;
         position: absolute;
         top: 48px;
         right: -200%;
@@ -85,4 +95,15 @@
       }
     }
   }
+}
+.darker-back{
+  display: none;
+  position: absolute;
+  width: 134%;
+  right: -9.35%;
+  height: 8550%;
+  top: 49px;
+  z-index: 20;
+  background-color: black;
+  opacity: 0.5;
 }
