--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -29,3 +29,4 @@ $category-responsive-title : #858585;
 $footer-colored-text : #0fabc6;
 $personal-icon-color : #4caf50;
 $personal-title-color : #232933;
+$nav-hover : #f9f9f9;
