--- a/components/header/navigation/dropdown/allCategories/style/all-categories.module.scss
+++ b/components/header/navigation/dropdown/allCategories/style/all-categories.module.scss
@@ -4,6 +4,7 @@
   position: absolute;
   right: 0;
   top: 48px;
+  padding-bottom: 10px;
   width: 115%;
   background-color: $white;
   border-radius: 0 0 8px 8px;
