--- a/components/footer/footer-downloads/style/footer-download.module.scss
+++ b/components/footer/footer-downloads/style/footer-download.module.scss
@@ -1,5 +1,5 @@
 @import 'styles/variables';
-
+@import './download-item';
 .footer-download-container {
   .footer-download {
     background-color: $footer-download-back;
@@ -18,7 +18,6 @@
       padding: 0;
       width: 95%;
     }
-
     .more-items {
       display: flex;
       flex-direction: row-reverse;
@@ -35,63 +34,7 @@
       @media screen and (max-width: 600px){
         display: block;
       }
-      .download-item {
-        background-repeat: no-repeat !important;
-        background-size: cover !important;
-        width: 150px;
-        @media screen and (max-width: 600px){
-          height: 50px!important;
-          width: 168px!important;
-        }
-        @media screen and (max-width: 600px) {
-          &:nth-child(1) {
-            background: url("https://mobile.digikala.com/static/files/77ae1bc6.png") no-repeat !important;
-            background-size: cover !important;
-          }
-          &:nth-child(2) {
-            background: url("https://mobile.digikala.com/static/files/77ae1bc6.png") no-repeat !important;
-            background-size: cover !important;
-          }
-          &:nth-child(3) {
-            background: url("https://mobile.digikala.com/static/files/43afe6fd.png") no-repeat !important;
-            background-size: cover !important;
-          }
-          &:nth-child(4) {
-            background: url("https://mobile.digikala.com/static/files/60d5158a.png") no-repeat !important;
-            background-size: cover !important;
-          }
-        }
-      }
-      .download-item, .download-more {
-        height: 44px;
-        margin: 5px;
-      }
-      .download-more {
-        width: 44px;
-        display: flex;
-        border-radius: 4px;
-        align-items: center;
-        font-weight: bolder;
-        justify-content: center;
-        background-color: $white;
-        @media screen and (max-width: 600px) {
-          position: relative;
-          &:after {
-            content: "<   اطلاعات بیشتر";
-            color: $footer-colored-text;
-            font-size: 12px;
-            white-space: nowrap;
-            background-color: $white;
-            position: absolute;
-            top: -3px;
-            padding-bottom: 15px;
-            left: 10px;
-            font-weight: normal;
-          }
-        }
-      }
     }
-
     .download-title-container {
       display: flex;
       justify-content: center;
@@ -99,7 +42,6 @@
       @media screen and (max-width: 600px) {
         height: fit-content;
       }
-
       .label {
         font-size: 18px;
         margin: 0 15px;
