added responsive things with custom isMobile hook

--- a/components/categories/categories-card/scss/categories-card.module.scss
+++ b/components/categories/categories-card/scss/categories-card.module.scss
@@ -4,7 +4,7 @@
   font-family: digikala;
   direction: rtl;
   grid-template-rows: 50% 50% 1%;
-  width: 133px;
+  width: 10%;
   cursor: pointer;
   text-align: center;
   @media screen and (max-width: 600px){
