--- a/components/footer/footer-columns/style/footer-columns.module.scss
+++ b/components/footer/footer-columns/style/footer-columns.module.scss
@@ -48,7 +48,7 @@
       margin-top: 10px;
       direction: rtl;
       @media screen and (max-width: 600px){
-        margin-right: 40%;
+        margin-right: 50%;
         margin-top: -8.5%;
       }
       .links{
@@ -94,7 +94,7 @@
         text-align: center;
       }
       .email-input{
-        width: 340px;
+        width: 100%;
         background: $input-back;
         padding: 8px 12px 13px 12px;
         border-radius: 8px;
