--- a/components/header/navigation/scss/navigation.module.scss
+++ b/components/header/navigation/scss/navigation.module.scss
@@ -65,7 +65,7 @@
         .drop-down{
           display: block;
         }
-        & + .categories{
+        .categories{
           display: block;
         }
       }
