--- a/components/specials/specialCard/scss/special-card.module.scss
+++ b/components/specials/specialCard/scss/special-card.module.scss
@@ -19,7 +19,7 @@
   }
   @media screen and (max-width: 600px){
     height: 330px;
-    width: 200px;
+    width: 99%;
     margin: 10px 0;
     .card-img {
       width: 120px;
