--- a/components/sponseredAds/scss/sponsered-ad.module.scss
+++ b/components/sponseredAds/scss/sponsered-ad.module.scss
@@ -2,7 +2,7 @@
   @media screen and (min-width:600px){
     width: 71.4%;
     img{
-      width: 319px;
+      width: 22%;
       height: 240px;
     }
   }
