--- a/components/specials/specialCard/scss/special-card.module.scss
+++ b/components/specials/specialCard/scss/special-card.module.scss
@@ -11,6 +11,9 @@
   margin: 10px;
   direction: rtl;
   width: 259px;
+  @media screen and (min-width: 1000px) and (max-width: 1450px){
+    width: 200px;
+  }
   .card-img {
     width: 180px;
     height: 180px;
