--- a/components/categories/scss/categories.module.scss
+++ b/components/categories/scss/categories.module.scss
@@ -2,6 +2,7 @@
 .categories-container{
   @media screen and (max-width: 600px){
     width: 90%;
+    height: fit-content;
     background-color: transparent;
     box-shadow: none;
     margin-bottom: -10px;
