--- a/components/footer/footer-downloads/style/download-item.scss
+++ b/components/footer/footer-downloads/style/download-item.scss
@@ -6,6 +6,10 @@
     height: 50px!important;
     width: 168px!important;
   }
+  @media screen and (max-width: 350px){
+    height: 50px!important;
+    width: 142px!important;
+  }
   @media screen and (max-width: 600px) {
     &:nth-child(1) {
       background: url("https://mobile.digikala.com/static/files/77ae1bc6.png") no-repeat !important;
