--- a/components/footer/footer-downloads/style/footer-download.module.scss
+++ b/components/footer/footer-downloads/style/footer-download.module.scss
@@ -25,7 +25,7 @@
       @media screen and (max-width: 600px){
         position: absolute;
         top: 25px;
-        right: 0%;
+        justify-content: center;
       }
     }
     .downloads {
